crates/gridwell-writer-html/tests/snapshots/snapshots__two-row-groups.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Country</th>
        <th class="gw__al_left">Value</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td colspan="2">
          North America
        </td>
      </tr>
      <tr>
        <td>USA</td>
        <td>1250</td>
      </tr>
      <tr>
        <td>Canada</td>
        <td>420</td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <td colspan="2">
          Europe
        </td>
      </tr>
      <tr>
        <td>Germany</td>
        <td>890</td>
      </tr>
      <tr>
        <td>France</td>
        <td>610</td>
      </tr>
    </tbody>
  </table>
</div>
