crates/gridwell-writer-html/tests/snapshots/snapshots__typed-values.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
    .gw_table .gw__al_right { text-align: right }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Name</th>
        <th class="gw__al_right">Score</th>
        <th class="gw__al_left">Active</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Alice</td>
        <td class="gw__al_right">90</td>
        <td>yes</td>
      </tr>
      <tr>
        <td>Bob</td>
        <td class="gw__al_right">85</td>
        <td>no</td>
      </tr>
    </tbody>
  </table>
</div>
