crates/gridwell-writer-html/tests/snapshots/snapshots__unicode-cjk.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
  </style>
  <div role="heading" aria-level="1">
    販売実績
  </div>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">地域</th>
        <th class="gw__al_left">売上</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>東京</td>
        <td>1,250</td>
      </tr>
      <tr>
        <td>大阪</td>
        <td>980</td>
      </tr>
    </tbody>
  </table>
</div>
