crates/gridwell-writer-html/tests/snapshots/snapshots__unicode-emoji.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Mood</th>
        <th class="gw__al_left">Icon</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>happy</td>
        <td>😀</td>
      </tr>
      <tr>
        <td>party</td>
        <td>🎉🎊</td>
      </tr>
      <tr>
        <td>family</td>
        <td>👨‍👩‍👧‍👦</td>
      </tr>
    </tbody>
  </table>
</div>
