crates/gridwell-writer-html/tests/snapshots/snapshots__unicode-rtl.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">الاسم</th>
        <th class="gw__al_left">القيمة</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>مرحبا</td>
        <td>١٢٣</td>
      </tr>
      <tr>
        <td>שלום</td>
        <td>456</td>
      </tr>
    </tbody>
  </table>
</div>
