crates/gridwell-writer-html/tests/snapshots/snapshots__wide-50-cols.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">c0</th>
        <th class="gw__al_left">c1</th>
        <th class="gw__al_left">c2</th>
        <th class="gw__al_left">c3</th>
        <th class="gw__al_left">c4</th>
        <th class="gw__al_left">c5</th>
        <th class="gw__al_left">c6</th>
        <th class="gw__al_left">c7</th>
        <th class="gw__al_left">c8</th>
        <th class="gw__al_left">c9</th>
        <th class="gw__al_left">c10</th>
        <th class="gw__al_left">c11</th>
        <th class="gw__al_left">c12</th>
        <th class="gw__al_left">c13</th>
        <th class="gw__al_left">c14</th>
        <th class="gw__al_left">c15</th>
        <th class="gw__al_left">c16</th>
        <th class="gw__al_left">c17</th>
        <th class="gw__al_left">c18</th>
        <th class="gw__al_left">c19</th>
        <th class="gw__al_left">c20</th>
        <th class="gw__al_left">c21</th>
        <th class="gw__al_left">c22</th>
        <th class="gw__al_left">c23</th>
        <th class="gw__al_left">c24</th>
        <th class="gw__al_left">c25</th>
        <th class="gw__al_left">c26</th>
        <th class="gw__al_left">c27</th>
        <th class="gw__al_left">c28</th>
        <th class="gw__al_left">c29</th>
        <th class="gw__al_left">c30</th>
        <th class="gw__al_left">c31</th>
        <th class="gw__al_left">c32</th>
        <th class="gw__al_left">c33</th>
        <th class="gw__al_left">c34</th>
        <th class="gw__al_left">c35</th>
        <th class="gw__al_left">c36</th>
        <th class="gw__al_left">c37</th>
        <th class="gw__al_left">c38</th>
        <th class="gw__al_left">c39</th>
        <th class="gw__al_left">c40</th>
        <th class="gw__al_left">c41</th>
        <th class="gw__al_left">c42</th>
        <th class="gw__al_left">c43</th>
        <th class="gw__al_left">c44</th>
        <th class="gw__al_left">c45</th>
        <th class="gw__al_left">c46</th>
        <th class="gw__al_left">c47</th>
        <th class="gw__al_left">c48</th>
        <th class="gw__al_left">c49</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>0</td>
        <td>1</td>
        <td>2</td>
        <td>3</td>
        <td>4</td>
        <td>5</td>
        <td>6</td>
        <td>7</td>
        <td>8</td>
        <td>9</td>
        <td>10</td>
        <td>11</td>
        <td>12</td>
        <td>13</td>
        <td>14</td>
        <td>15</td>
        <td>16</td>
        <td>17</td>
        <td>18</td>
        <td>19</td>
        <td>20</td>
        <td>21</td>
        <td>22</td>
        <td>23</td>
        <td>24</td>
        <td>25</td>
        <td>26</td>
        <td>27</td>
        <td>28</td>
        <td>29</td>
        <td>30</td>
        <td>31</td>
        <td>32</td>
        <td>33</td>
        <td>34</td>
        <td>35</td>
        <td>36</td>
        <td>37</td>
        <td>38</td>
        <td>39</td>
        <td>40</td>
        <td>41</td>
        <td>42</td>
        <td>43</td>
        <td>44</td>
        <td>45</td>
        <td>46</td>
        <td>47</td>
        <td>48</td>
        <td>49</td>
      </tr>
      <tr>
        <td>100</td>
        <td>101</td>
        <td>102</td>
        <td>103</td>
        <td>104</td>
        <td>105</td>
        <td>106</td>
        <td>107</td>
        <td>108</td>
        <td>109</td>
        <td>110</td>
        <td>111</td>
        <td>112</td>
        <td>113</td>
        <td>114</td>
        <td>115</td>
        <td>116</td>
        <td>117</td>
        <td>118</td>
        <td>119</td>
        <td>120</td>
        <td>121</td>
        <td>122</td>
        <td>123</td>
        <td>124</td>
        <td>125</td>
        <td>126</td>
        <td>127</td>
        <td>128</td>
        <td>129</td>
        <td>130</td>
        <td>131</td>
        <td>132</td>
        <td>133</td>
        <td>134</td>
        <td>135</td>
        <td>136</td>
        <td>137</td>
        <td>138</td>
        <td>139</td>
        <td>140</td>
        <td>141</td>
        <td>142</td>
        <td>143</td>
        <td>144</td>
        <td>145</td>
        <td>146</td>
        <td>147</td>
        <td>148</td>
        <td>149</td>
      </tr>
      <tr>
        <td>200</td>
        <td>201</td>
        <td>202</td>
        <td>203</td>
        <td>204</td>
        <td>205</td>
        <td>206</td>
        <td>207</td>
        <td>208</td>
        <td>209</td>
        <td>210</td>
        <td>211</td>
        <td>212</td>
        <td>213</td>
        <td>214</td>
        <td>215</td>
        <td>216</td>
        <td>217</td>
        <td>218</td>
        <td>219</td>
        <td>220</td>
        <td>221</td>
        <td>222</td>
        <td>223</td>
        <td>224</td>
        <td>225</td>
        <td>226</td>
        <td>227</td>
        <td>228</td>
        <td>229</td>
        <td>230</td>
        <td>231</td>
        <td>232</td>
        <td>233</td>
        <td>234</td>
        <td>235</td>
        <td>236</td>
        <td>237</td>
        <td>238</td>
        <td>239</td>
        <td>240</td>
        <td>241</td>
        <td>242</td>
        <td>243</td>
        <td>244</td>
        <td>245</td>
        <td>246</td>
        <td>247</td>
        <td>248</td>
        <td>249</td>
      </tr>
    </tbody>
  </table>
</div>
